addons/k8s-gatekeeper/templates/medtech-eu_mdr_eudamed_registration-constrainttemplate.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: medtech-eu_mdr_eudamed_registration
  annotations:
    rulehub.id: medtech.eu_mdr_eudamed_registration
    rulehub.title: <Policy Title>
    rulehub.links: |
      - <https://reference-1>
      - <https://reference-2>
spec:
  crd:
    spec:
      names:
        kind: MedtechEu_mdr_eudamed_registrationConstraint
      validation:
        openAPIV3Schema:
          type: object
          properties:
            # add schema for parameters
            enabled:
              type: boolean
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package rulehub.medtech.eu_mdr_eudamed_registration
      import future.keywords.if

      default deny = []

      # Example: deny with a message
      deny[msg] {
        input.review.kind.kind == "Deployment"
        msg := "medtech.eu_mdr_eudamed_registration: example violation"
      }
